Changed sizing of intro sections for mobile devices to fix titles being too close to bottom of screen on portfolio pages.

--- a/_sass/_columns.sass
+++ b/_sass/_columns.sass
@@ -36,8 +36,12 @@
 
 img.aside
   object-fit: cover
-  height: 95vh
+  height: 88vh
   min-height: 100%
+
+@media (min-width: 768px)
+  img.aside
+    height: 95vh
 
 .columns li h3,
 .columns li h4,
